[GEC-2] - Fix CSS bleeding

--- a/src/styles/_newDiscussion.component.scss
+++ b/src/styles/_newDiscussion.component.scss
@@ -10,6 +10,7 @@
   header {
     padding: 0;
     background: none;
+    height: initial;
 
     .go-back-btn {
       padding: 0;
