--- a/src/styles/go1ext_inject.scss
+++ b/src/styles/go1ext_inject.scss
@@ -81,6 +81,8 @@
 
     ul {
       margin: 0;
+      padding: 0;
+      list-style: none;
 
       li {
         .fa {
